# dd_lsp

./: README.md  default.nix  flake.nix  mklsp.nix  nixvim.nix
src/: CHANGELOG.md  LICENSE  result  src.cabal
src/app/: Main.hs
src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
