cabal-version:      3.0
name:               src

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.0.1
license:            MIT
license-file:       LICENSE
author:             Johann Aschenloher
maintainer:         hansi.aschenloher@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable dd_lsp
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1,
		      lsp ^>=2.7.0.0,
		      text ^>=2.0.2

    hs-source-dirs:   app
    default-language: GHC2021
